[Mac][Material Design] Add space between icon and text in location bar.

The spec calls for one additional pt of space between the icon and the
text.

R=avi@chromium.org
BUG=596684

Review URL: https://codereview.chromium.org/1900873004

Cr-Commit-Position: refs/heads/master@{#388550}

Former-commit-id: 03a74b53c60029b17689f292b828c72df020406a